# seoul-ili-forecast-abm

./: .env.example  .gitattributes  .gitignore  API_KEYS_LAYOUT.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements-langchain.txt  requirements-multiagent.txt  run_pipeline.sh  run_resume_phase12.sh
.github/workflows/: portability.yml  reproducibility.yml
docs/: ABM.md  ARIA.md  ARIA.md.links  ARIA.md.spans  ENGINEERING_PRINCIPLES.md  EVAL_METHODOLOGY_AND_SPLIT_20260624.md  LLM_EVAL_STANDARDS.md  ODD_PROTOCOL.md  PERFORMANCE_FRAMEWORK.md  PHASE_MAPPING.md  PIPELINE_DB_TO_WEB.md  PIPO_CALIBRATION.md  README.md  REPOSITORY_MAP.md  SECURITY_FIXES_20260719.md  WEB_DASHBOARD_GUIDE.md
paper/: THESIS_TOC_LOCK.tsv
paper/ch4_new_assets/: fig_B_dm_tieset_forest.py  fig_C_regime_coverage.py  fig_E_abm_behaviour_gap.py  fig_relwis_leaderboard.py  stat_tier3_bootstrap_cis.py
paper/comparison_tables/: README.md
paper/figures_2026/: _cross_region_perf.json
paper/methods_assets/: fig_architecture_4panel.py  fig_aria_arch.py  fig_aria_arch_portrait.py  fig_fusedepi_arch.py  fig_integrated_architecture.py  fig_leakage_split.py  fig_observed_predicted.py  fig_rp_pipeline.py  fig_seirvd.py  fig_selection_hierarchy.py  fig_system_overview.py  fig_uq_conformal.py
paper/results_assets/: fig12_density_split.py  fig16_agent_profile_split.py  fig17_overseas_split.py  fig19_aria_multillm_split.py  fig20_identifiability_split.py  fig6_six_metric_heatmap.py
paper/trajectory/: trajectory_table.csv
scripts/: .nov_mech_cache.npz  _alert_champion_vs_tirex.json  _alert_champion_vs_tirex.py  _basic_feat_stability.json  _basic_feat_stability.py  _beat_tirex_native.json  _beat_tirex_native.py  _canonical_split_verify.json  _canonical_split_verify.py  _dec_boosted_mech_bagged.json  _dec_boosted_mech_multiorigin.json  _decompose_point_vs_construction.json  _decompose_point_vs_construction.py  _epifusion_stage1.json  _epifusion_stage1_lora.py  _epifusion_stage2.json  _epifusion_stage2_tabpfn.py  _exp_adv_verify.json  _exp_adv_verify.py  _exp_combo.json  _exp_combo.py  _exp_combo_verify.json  _exp_combo_verify.py  _exp_crosscountry.json  _exp_crosscountry.py  _exp_crosscountry_verify.json  _exp_crosscountry_verify.py  _exp_enriched_scale.json  _exp_enriched_scale.py  _exp_external_ts.json  _exp_external_ts.py  _exp_fast.json  _exp_fast.py  _exp_lgbm_calib.json  _exp_lgbm_calib.py  _exp_lgbm_qresid.json  _exp_lgbm_qresid.py  _exp_lgbm_sweep.json  _exp_lgbm_sweep.py  _exp_mondrian_cqr.json  (+145 more)
simulation/: __init__.py  __main__.py  config_global.py  disease_params.py  verify_all.py
simulation/abm/: __init__.py  _make_aria_diagram.py  _make_figures.py  _make_validity_figures.py  _run_mvp.py  _run_scenarios.py  abc_smc.py  adaptive_agent_count.py  adaptive_allocation.py  adaptive_world.py  adversarial_tests.py  affiliation.py  age_validation.py  agent_based.py  agent_history.py  agent_kernel.py  agent_mobility.py  agent_world_fit.py  behavior_disease_eval.py  behavior_disease_validation.py  behavioral_proof.py  behavioural.py  calibrate.py  comorbidity.py  contact_network.py  contact_structure.py  counterfactual.py  density_allocation.py  dynamical_signatures.py  enkf_assimilation.py  environment.py  epi_proof.py  forecast_anchor.py  identifiability.py  mobility_timeresolved.py  multi_strain.py  multiproxy_behavioral_validation.py  network_interventions.py  network_params_from_db.py  observation_model.py  (+13 more)
simulation/analytics/: __init__.py  ablation_factorial.py  ablation_stats.py  adaptive_conformal.py  alert_curve.py  bootstrap_ci.py  conditional_calibration.py  conformal_aci.py  conformal_cqr.py  diagnostics.py  dtw_plv.py  eda_equal_footing.py  elife_format.py  ensemble_combine.py  epidemiological.py  external_impact.py  horizon_coverage.py  hub_metrics.py  kdca_threshold.py  mcs.py  metric_rubric.py  metrics.py  multi_seed.py  multiple_testing.py  pareto_post_hoc.py  peak_weighting.py  uncertainty_decomp.py  unify_metrics.py
simulation/benchmarks/: __init__.py  bench_dl_baselines.py
simulation/c/: build.bat  build.sh  seir_core.c
simulation/cache/: __init__.py
simulation/cli/: __init__.py  _scenarios.py  _state.py  aria_commands.py  data_commands.py  db_commands.py  inference_commands.py  maintenance_commands.py  pipeline_commands.py  sim_commands.py  training_commands.py  utility_commands.py
simulation/collectors/: __init__.py  _endpoints.py  config.py  extract_pdf.py  group_g_gtrends.py  group_i_overseas.py  group_j_population_density.py  group_k_weather_gu.py  group_n_hospital.py  group_o_regional_ili.py  group_t_commuter_flows.py  group_w_overseas_weather.py  import_external.py  orchestrator.py  schemas.py  status.py  storage.py
simulation/data/: api_key.example.txt  pipeline_config.yaml
simulation/database/: __init__.py  analytics.py  config.py  maintain.py  schema.py  storage.py  validation.py
simulation/rust/: Cargo.toml  README.md
simulation/rust/src/: lib.rs
tests/: test_abc_smc.py  test_abm_surrogate.py  test_agent_history.py  test_champion_consistency.py  test_citation_trace.py  test_contact_network.py  test_count_glms_are_real.py  test_docx_numbers_match_results.py  test_enkf_assimilation.py  test_eq_citations_match_seq.py  test_expanding_window_leakfree.py  test_external_impact.py  test_fused_epi_pi_method_default.py  test_g338_theta_bstyle.py  test_g339_champion_leakfree.py  test_g341_dm_hln_nested.py  test_g344_rolling_membership.py  test_g345_flusight_rolling.py  test_g346_xmode_seed.py  test_g349_transform_rolling.py  test_g353_champion_count_invariant.py  test_g354_pi_leakfree.py  test_g355_subset_oof.py  test_g360_perm_budget.py  test_g362_shap_fallback.py  test_g365_adaptive_conformal.py  test_irb_period_compliance.py  test_multistrain.py  test_peak_weighting.py  test_sci_driver_attribution.py  test_sobol_sensitivity.py  test_uncertainty_decomp.py  test_waning_immunity.py
web/: .eslintrc.json  .gitignore  .npmrc  Dockerfile  README.md  docker-compose.yml  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
(+1359 files in other folders)
