[package]
name = "seir_core"
version = "0.1.0"
edition = "2021"
description = "Rust-accelerated SEIR tau-leap stepper for MPH influenza simulation. Optional — Numba @njit fallback in simulation/sim/stepper.py."

[lib]
name = "seir_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"  # parallel 25-gu step

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.maturin]
python-source = "python"
module-name = "seir_core"
